Opens first run page when the extension is installed
Includes local_storage.js of privly-applications

--- a/privly.safariextension/privly.html
+++ b/privly.safariextension/privly.html
@@ -5,6 +5,8 @@
     <title>Privly Safari Extension</title>
 
     <!-- include scripts -->
+    <script type="text/javascript" src="privly-applications/shared/javascripts/local_storage.js"></script>
+    <script type="text/javascript" src="scripts/first_run.js"></script>
     <script type="text/javascript" src="scripts/handle_command_event.js"></script>
 
   </head>
