Added links to the popover
Added data-popover-path attribute for popover links

Added popover_data class

--- a/privly.safariextension/popover.html
+++ b/privly.safariextension/popover.html
@@ -14,6 +14,25 @@
         <span class="glyphicon glyphicon-play"></span> Start Injecting</a>
       </li>
 
+      <li class="divider"></li>
+      <li id="history"><a data-popover-path="privly-applications/History/new.html" class="popover_data">
+        <span class="glyphicon glyphicon-list-alt"></span>
+        View History</a>
+      </li>
+      <li id="Message"><a data-popover-path="privly-applications/Message/new.html" class="popover_data">
+        <span class="glyphicon glyphicon-pencil"></span>
+        New Message</a>
+      </li>
+
+      <li class="divider"></li>
+      <li id="options"><a data-popover-path="privly-applications/Pages/ChromeOptions.html" class="popover_data">
+        <span class="glyphicon glyphicon-wrench"></span>
+        Options</a>
+      </li>
+      <li id="help"><a data-popover-path="privly-applications/Help/new.html" class="popover_data">
+        <span class="glyphicon glyphicon-info-sign"></span>
+        Help</a>
+      </li>
     </ul>
 
     <!-- include scripts -->
