--- a/privly.safariextension/privly.html
+++ b/privly.safariextension/privly.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="scripts/background_scripts/handle_command_event.js"></script>
     <script type="text/javascript" src="scripts/background_scripts/modal_button.js"></script>
     <script type="text/javascript" src="scripts/background_scripts/reading_process.js"></script>
+    <script type="text/javascript" src="scripts/background_scripts/mirror_local_storage.js"></script>
 
   </head>
   <body>
